--- a/config.template.toml
+++ b/config.template.toml
@@ -1,56 +1,35 @@
-baseURL = "https://meik2333.com/"
-languageCode = "zh-cn"
-title = "MeiK's blog"
+baseURL = "https://li3t.com/"
+title = "li3t"
 theme = "github-style"
 pygmentsCodeFences = true
 pygmentsUseClasses = true
 
 [params]
-  author = "MeiK"
-  description = "In solitude, where we are least alone."
-  github = "MeiK2333"
-  facebook = "MeiK2333"
-  twitter = "MeiK2333"
-  linkedin = "MeiK2333"
-  instagram = "MeiK2333"
-  tumblr = "MeiK2333"
-  email = "meik2333@gmail.com"
-  url = "https://meik2333.com"
+  author = "ak"
+  description = "Sometimes you are the snake and sometimes you are the hoe."
+  github = "ajkoop"
+  instagram = "ajkoop"
+  email = "aj@li3t.com"
+  url = "https://koop.ws"
   keywords = "blog, google analytics"
   rss = true
   lastmod = true
   favicon = "/images/github-mark.png"
   avatar = "/images/avatar.png"
   headerIcon = "/images/github-mark-white.png"
-  location = "China"
+  location = "United States"
   userStatusEmoji = "😀"
   enableGitalk = true
   enableSearch = true
 
-  [params.gitalk]
-    clientID = "Your client ID" # Your client ID
-    clientSecret = "Your client secret" # Your client secret
-    repo = "LuvSia" # 您的博客的github地址Repository name，例如：xxxx.github.io
-    owner = "ventusoon" # 您的GitHub ID
-    admin = "ventusoon" # 您的GitHub ID
-    id = "location.pathname" # 文章页面的链接地址就是ID
-    labels = "gitalk" # Github issue labels. If you used to use Gitment, you can change it
-    perPage = 15 # Pagination size, with maximum 100.
-    pagerDirection = "last" # Comment sorting direction, available values are 'last' and 'first'.
-    createIssueManually = true # 设置为true，如果是管理员登录，会自动创建issue，如果是false，需要管理员手动添加第一个评论(issue)
-    distractionFreeMode = false # Enable hot key (cmd|ctrl + enter) submit comment.
-    proxy = "https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token" # 可以自行添加反向代理
   [[params.links]]
     title = "Link"
-    href = "https://github.com/meik2333"
+    href = "https://github.com/ajkoop"
   [[params.links]]
     title = "Link2"
-    href = "https://meik2333.com"
-    icon = "https://meik2333.com/images/avatar.png"
+    href = "https://koop.ws"
+    icon = "https://li3t/images/me.png"
 
 [frontmatter]
   lastmod = ["lastmod", ":fileModTime", ":default"]
 
-[services]
-  [services.googleAnalytics]
-    ID = "UA-123456-789"
